// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderiza Login Screen correctamente 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    source={
      {
        "testUri": "../../../assets/logo.png",
      }
    }
    style={
      {
        "height": 110,
        "marginBottom": 10,
        "minWidth": 200,
        "width": 110,
      }
    }
  />
  <Text
    style={
      {
        "color": "#0094FF",
        "fontSize": 20,
        "marginBottom": 10,
      }
    }
  >
    Inicio de sesión
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "marginVertical": 5,
        "width": "100%",
      }
    }
  >
    <TextInput
      autoCapitalize="nombre"
      autoCompleteType="email"
      error={false}
      errorText=""
      keyboardType="email-address"
      label="email"
      mode="outlined"
      name="email"
      onChangeText={[Function]}
      placeholder="Email"
      placeholderTextColor="#576574"
      returnKeyType="next"
      style={
        {
          "borderColor": "#ced4da",
          "borderRadius": 5,
          "borderWidth": 1,
          "color": "#000000",
          "fontSize": 14,
          "height": 30,
          "marginBottom": 7,
          "padding": 4,
          "width": "70%",
        }
      }
      textContentType="emailAddress"
      underlineColor="transparent"
      value=""
    />
    <TextInput
      error={false}
      errorText=""
      mode="outlined"
      onChangeText={[Function]}
      placeholder="Contraseña"
      placeholderTextColor="#576574"
      returnKeyType="done"
      secureTextEntry={true}
      style={
        {
          "borderColor": "#ced4da",
          "borderRadius": 5,
          "borderWidth": 1,
          "color": "#000000",
          "fontSize": 14,
          "height": 30,
          "marginBottom": 7,
          "padding": 4,
          "width": "70%",
        }
      }
      underlineColor="transparent"
      value=""
    />
  </View>
  <View
    style={
      {
        "alignItems": "flex-end",
        "marginBottom": 24,
        "width": "65%",
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#1234DF",
            "fontSize": 11,
          }
        }
      >
        Olvidaste la contraseña?
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#0094FF",
        "borderRadius": 5,
        "marginBottom": 3,
        "opacity": 1,
        "paddingBottom": 10,
        "paddingTop": 10,
        "width": "50%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "textAlign": "center",
        }
      }
    >
      Iniciar Sesión
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "marginTop": 4,
      }
    }
  >
    <Text
      style={
        {
          "color": "#0094FF",
        }
      }
    >
      No tienes una cuenta? 
    </Text>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#0094FF",
            "fontWeight": "bold",
          }
        }
      >
        Registrarme
      </Text>
    </View>
  </View>
</View>
`;

exports[`Renderiza Start Screen correctamente 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    source={
      {
        "testUri": "../../../assets/logo.png",
      }
    }
    style={
      {
        "height": 110,
        "marginBottom": 10,
        "minWidth": 200,
        "width": 110,
      }
    }
  />
  <Text
    style={
      {
        "color": "#0094FF",
        "fontSize": 16,
        "fontWeight": "bold",
        "marginBottom": 20,
      }
    }
  >
    ¡Bienvenido a Chippy!
  </Text>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#0094FF",
        "borderRadius": 5,
        "marginBottom": 3,
        "opacity": 1,
        "paddingBottom": 10,
        "paddingTop": 10,
        "width": "90%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "textAlign": "center",
        }
      }
    >
      Ya tengo una cuenta
    </Text>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#fff",
        "borderRadius": 5,
        "marginBottom": 3,
        "opacity": 1,
        "paddingBottom": 10,
        "paddingTop": 10,
        "width": "90%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#0094FF",
          "textAlign": "center",
        }
      }
    >
      Registrarme
    </Text>
  </View>
</View>
`;

exports[`renders Login Screen correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    source={
      {
        "testUri": "../../../assets/logo.png",
      }
    }
    style={
      {
        "height": 110,
        "marginBottom": 10,
        "minWidth": 200,
        "width": 110,
      }
    }
  />
  <Text
    style={
      {
        "color": "#0094FF",
        "fontSize": 20,
        "marginBottom": 10,
      }
    }
  >
    Inicio de sesión
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "marginVertical": 5,
        "width": "100%",
      }
    }
  >
    <TextInput
      autoCapitalize="nombre"
      autoCompleteType="email"
      error={false}
      errorText=""
      keyboardType="email-address"
      label="email"
      mode="outlined"
      name="email"
      onChangeText={[Function]}
      placeholder="Email"
      placeholderTextColor="#576574"
      returnKeyType="next"
      style={
        {
          "borderColor": "#ced4da",
          "borderRadius": 5,
          "borderWidth": 1,
          "color": "#000000",
          "fontSize": 14,
          "height": 30,
          "marginBottom": 7,
          "padding": 4,
          "width": "70%",
        }
      }
      textContentType="emailAddress"
      underlineColor="transparent"
      value=""
    />
    <TextInput
      error={false}
      errorText=""
      mode="outlined"
      onChangeText={[Function]}
      placeholder="Contraseña"
      placeholderTextColor="#576574"
      returnKeyType="done"
      secureTextEntry={true}
      style={
        {
          "borderColor": "#ced4da",
          "borderRadius": 5,
          "borderWidth": 1,
          "color": "#000000",
          "fontSize": 14,
          "height": 30,
          "marginBottom": 7,
          "padding": 4,
          "width": "70%",
        }
      }
      underlineColor="transparent"
      value=""
    />
  </View>
  <View
    style={
      {
        "alignItems": "flex-end",
        "marginBottom": 24,
        "width": "65%",
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#1234DF",
            "fontSize": 11,
          }
        }
      >
        Olvidaste la contraseña?
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#0094FF",
        "borderRadius": 5,
        "marginBottom": 3,
        "opacity": 1,
        "paddingBottom": 10,
        "paddingTop": 10,
        "width": "50%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "textAlign": "center",
        }
      }
    >
      Iniciar Sesión
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "marginTop": 4,
      }
    }
  >
    <Text
      style={
        {
          "color": "#0094FF",
        }
      }
    >
      No tienes una cuenta? 
    </Text>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#0094FF",
            "fontWeight": "bold",
          }
        }
      >
        Registrarme
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders Start Screen correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    source={
      {
        "testUri": "../../../assets/logo.png",
      }
    }
    style={
      {
        "height": 110,
        "marginBottom": 10,
        "minWidth": 200,
        "width": 110,
      }
    }
  />
  <Text
    style={
      {
        "color": "#0094FF",
        "fontSize": 16,
        "fontWeight": "bold",
        "marginBottom": 20,
      }
    }
  >
    ¡Bienvenido a Chippy!
  </Text>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#0094FF",
        "borderRadius": 5,
        "marginBottom": 3,
        "opacity": 1,
        "paddingBottom": 10,
        "paddingTop": 10,
        "width": "90%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "textAlign": "center",
        }
      }
    >
      Ya tengo una cuenta
    </Text>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#fff",
        "borderRadius": 5,
        "marginBottom": 3,
        "opacity": 1,
        "paddingBottom": 10,
        "paddingTop": 10,
        "width": "90%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#0094FF",
          "textAlign": "center",
        }
      }
    >
      Registrarme
    </Text>
  </View>
</View>
`;

exports[`renders correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    source={
      {
        "testUri": "../../../assets/logo.png",
      }
    }
    style={
      {
        "height": 110,
        "marginBottom": 10,
        "minWidth": 200,
        "width": 110,
      }
    }
  />
  <Text
    style={
      {
        "color": "#0094FF",
        "fontSize": 20,
        "marginBottom": 10,
      }
    }
  >
    Inicio de sesión
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "marginVertical": 5,
        "width": "100%",
      }
    }
  >
    <TextInput
      autoCapitalize="nombre"
      autoCompleteType="email"
      error={false}
      errorText=""
      keyboardType="email-address"
      label="email"
      mode="outlined"
      name="email"
      onChangeText={[Function]}
      placeholder="Email"
      placeholderTextColor="#576574"
      returnKeyType="next"
      style={
        {
          "borderColor": "#ced4da",
          "borderRadius": 5,
          "borderWidth": 1,
          "color": "#000000",
          "fontSize": 14,
          "height": 30,
          "marginBottom": 7,
          "padding": 4,
          "width": "70%",
        }
      }
      textContentType="emailAddress"
      underlineColor="transparent"
      value=""
    />
    <TextInput
      error={false}
      errorText=""
      mode="outlined"
      onChangeText={[Function]}
      placeholder="Contraseña"
      placeholderTextColor="#576574"
      returnKeyType="done"
      secureTextEntry={true}
      style={
        {
          "borderColor": "#ced4da",
          "borderRadius": 5,
          "borderWidth": 1,
          "color": "#000000",
          "fontSize": 14,
          "height": 30,
          "marginBottom": 7,
          "padding": 4,
          "width": "70%",
        }
      }
      underlineColor="transparent"
      value=""
    />
  </View>
  <View
    style={
      {
        "alignItems": "flex-end",
        "marginBottom": 24,
        "width": "65%",
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#1234DF",
            "fontSize": 11,
          }
        }
      >
        Olvidaste la contraseña?
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#0094FF",
        "borderRadius": 5,
        "marginBottom": 3,
        "opacity": 1,
        "paddingBottom": 10,
        "paddingTop": 10,
        "width": "50%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "textAlign": "center",
        }
      }
    >
      Iniciar Sesión
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "marginTop": 4,
      }
    }
  >
    <Text
      style={
        {
          "color": "#0094FF",
        }
      }
    >
      No tienes una cuenta? 
    </Text>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#0094FF",
            "fontWeight": "bold",
          }
        }
      >
        Registrarme
      </Text>
    </View>
  </View>
</View>
`;
